--- a/grasa_event_locator/templates/register.html
+++ b/grasa_event_locator/templates/register.html
@@ -164,7 +164,7 @@
     okBtn.onclick = function(){
         //SUBMITS the form
         $('form').submit()
-        //window.location = '/search/search.html';
+        //window.location = '/search/';
     }
 
     //confirm password extra validation
