--- a/grasa_event_locator/templates/search/search.html
+++ b/grasa_event_locator/templates/search/search.html
@@ -168,7 +168,7 @@
        function(){ $(this).addClass('border-info') },
        function(){ $(this).removeClass('border-info') }
     ).click(function() {
-      window.location = "/search/search.html"
+      window.location = "/search/"
     });
     //Filter Buttons
     var clearBtn = document.getElementById('clearFilters');
