--- a/grasa_event_locator/templates/editEvent.html
+++ b/grasa_event_locator/templates/editEvent.html
@@ -90,57 +90,57 @@
                         <div class="col-md-2">
                           <label for="loc3">State</label>
                           <select class="form-control" id ="loc3" required>
-                                <option value="AL" >AL</option>
-                                <option value="AK">AK</option>
-                                <option value="AR">AR</option>
-                                <option value="AZ">AZ</option>
-                                <option value="CA">CA</option>
-                                <option value="CO">CO</option>
-                                <option value="CT">CT</option>
-                                <option value="DC">DC</option>
+                                <option value="AL"{% ifequal address.2.strip "AL" %} selected{% endifequal %} >AL</option>
+                                <option value="AK"{% ifequal address.2.strip "AK" %} selected{% endifequal %}>AK</option>
+                                <option value="AR"{% ifequal address.2.strip "AR" %} selected{% endifequal %}>AR</option>
+                                <option value="AZ"{% ifequal address.2.strip "AZ" %} selected{% endifequal %}>AZ</option>
+                                <option value="CA"{% ifequal address.2.strip "CA" %} selected{% endifequal %}>CA</option>
+                                <option value="CO"{% ifequal address.2.strip "CO" %} selected{% endifequal %}>CO</option>
+                                <option value="CT"{% ifequal address.2.strip "CT" %} selected{% endifequal %}>CT</option>
+                                <option value="DC"{% ifequal address.2.strip "DC" %} selected{% endifequal %}>DC</option>
                                 <option value="DE"{% ifequal address.2.strip "DE" %} selected{% endifequal %}>DE</option>
-                                <option value="FL">FL</option>
-                                <option value="GA">GA</option>
-                                <option value="HI">HI</option>
-                                <option value="IA">IA</option>
-                                <option value="ID">ID</option>
-                                <option value="IL">IL</option>
-                                <option value="IN">IN</option>
-                                <option value="KS">KS</option>
-                                <option value="KY">KY</option>
-                                <option value="LA">LA</option>
-                                <option value="MA">MA</option>
-                                <option value="MD">MD</option>
-                                <option value="ME">ME</option>
-                                <option value="MI">MI</option>
-                                <option value="MN">MN</option>
-                                <option value="MO">MO</option>
-                                <option value="MS">MS</option>
-                                <option value="MT">MT</option>
-                                <option value="NC">NC</option>
-                                <option value="NE">NE</option>
-                                <option value="NH">NH</option>
-                                <option value="NJ">NJ</option>
-                                <option value="NM">NM</option>
-                                <option value="NV">NV</option>
-                                <option value="NY" {% ifequal address.2.strip "NY" %} selected{% endifequal %}>NY</option>
-                                <option value="ND">ND</option>
-                                <option value="OH">OH</option>
-                                <option value="OK">OK</option>
-                                <option value="OR">OR</option>
-                                <option value="PA">PA</option>
-                                <option value="RI">RI</option>
-                                <option value="SC">SC</option>
-                                <option value="SD">SD</option>
-                                <option value="TN">TN</option>
-                                <option value="TX">TX</option>
-                                <option value="UT">UT</option>
-                                <option value="VT">VT</option>
-                                <option value="VA">VA</option>
-                                <option value="WA">WA</option>
-                                <option value="WI">WI</option>
-                                <option value="WV">WV</option>
-                                <option value="WY">WY</option>
+                                <option value="FL"{% ifequal address.2.strip "Fl" %} selected{% endifequal %}>FL</option>
+                                <option value="GA"{% ifequal address.2.strip "GA" %} selected{% endifequal %}>GA</option>
+                                <option value="HI"{% ifequal address.2.strip "HI" %} selected{% endifequal %}>HI</option>
+                                <option value="IA"{% ifequal address.2.strip "IA" %} selected{% endifequal %}>IA</option>
+                                <option value="ID"{% ifequal address.2.strip "ID" %} selected{% endifequal %}>ID</option>
+                                <option value="IL"{% ifequal address.2.strip "IL" %} selected{% endifequal %}>IL</option>
+                                <option value="IN"{% ifequal address.2.strip "IN" %} selected{% endifequal %}>IN</option>
+                                <option value="KS"{% ifequal address.2.strip "KS" %} selected{% endifequal %}>KS</option>
+                                <option value="KY"{% ifequal address.2.strip "KY" %} selected{% endifequal %}>KY</option>
+                                <option value="LA"{% ifequal address.2.strip "LA" %} selected{% endifequal %}>LA</option>
+                                <option value="MA"{% ifequal address.2.strip "MA" %} selected{% endifequal %}>MA</option>
+                                <option value="MD"{% ifequal address.2.strip "MD" %} selected{% endifequal %}>MD</option>
+                                <option value="ME"{% ifequal address.2.strip "ME" %} selected{% endifequal %}>ME</option>
+                                <option value="MI"{% ifequal address.2.strip "MI" %} selected{% endifequal %}>MI</option>
+                                <option value="MN"{% ifequal address.2.strip "MN" %} selected{% endifequal %}>MN</option>
+                                <option value="MO"{% ifequal address.2.strip "MO" %} selected{% endifequal %}>MO</option>
+                                <option value="MS"{% ifequal address.2.strip "MS" %} selected{% endifequal %}>MS</option>
+                                <option value="MT"{% ifequal address.2.strip "MT" %} selected{% endifequal %}>MT</option>
+                                <option value="NC"{% ifequal address.2.strip "NC" %} selected{% endifequal %}>NC</option>
+                                <option value="NE"{% ifequal address.2.strip "NE" %} selected{% endifequal %}>NE</option>
+                                <option value="NH"{% ifequal address.2.strip "NH" %} selected{% endifequal %}>NH</option>
+                                <option value="NJ"{% ifequal address.2.strip "NJ" %} selected{% endifequal %}>NJ</option>
+                                <option value="NM"{% ifequal address.2.strip "NM" %} selected{% endifequal %}>NM</option>
+                                <option value="NV"{% ifequal address.2.strip "NV" %} selected{% endifequal %}>NV</option>
+                                <option value="NY"{% ifequal address.2.strip "NY" %} selected{% endifequal %}>NY</option>
+                                <option value="ND"{% ifequal address.2.strip "ND" %} selected{% endifequal %}>ND</option>
+                                <option value="OH"{% ifequal address.2.strip "OH" %} selected{% endifequal %}>OH</option>
+                                <option value="OK"{% ifequal address.2.strip "OK" %} selected{% endifequal %}>OK</option>
+                                <option value="OR"{% ifequal address.2.strip "OR" %} selected{% endifequal %}>OR</option>
+                                <option value="PA"{% ifequal address.2.strip "PA" %} selected{% endifequal %}>PA</option>
+                                <option value="RI"{% ifequal address.2.strip "RI" %} selected{% endifequal %}>RI</option>
+                                <option value="SC"{% ifequal address.2.strip "SC" %} selected{% endifequal %}>SC</option>
+                                <option value="SD"{% ifequal address.2.strip "SD" %} selected{% endifequal %}>SD</option>
+                                <option value="TN"{% ifequal address.2.strip "TN" %} selected{% endifequal %}>TN</option>
+                                <option value="TX"{% ifequal address.2.strip "TX" %} selected{% endifequal %}>TX</option>
+                                <option value="UT"{% ifequal address.2.strip "UT" %} selected{% endifequal %}>UT</option>
+                                <option value="VT"{% ifequal address.2.strip "VT" %} selected{% endifequal %}>VT</option>
+                                <option value="VA"{% ifequal address.2.strip "VA" %} selected{% endifequal %}>VA</option>
+                                <option value="WA"{% ifequal address.2.strip "WA" %} selected{% endifequal %}>WA</option>
+                                <option value="WI"{% ifequal address.2.strip "WI" %} selected{% endifequal %}>WI</option>
+                                <option value="WV"{% ifequal address.2.strip "WV" %} selected{% endifequal %}>WV</option>
+                                <option value="WY"{% ifequal address.2.strip "WY" %} selected{% endifequal %}>WY</option>
                             </select>
                           <div class="invalid-feedback">
                             Please provide a valid state.
