Inport the exception only.
allAdmins: Add on to the invalid email message.
Views: Replace import * from the smrp library with just the exception.

--- a/grasa_event_locator/templates/allAdmins.html
+++ b/grasa_event_locator/templates/allAdmins.html
@@ -10,7 +10,7 @@
         {% endif %}
         {% if invalidEmail %}
         <div class="alert alert-warning" role="alert">
-          The admin account has been created, but the email failed to send due to invalid formatting.
+          The admin account has been created, but the email failed to send due to invalid formatting. Please login to the new Admininstrator account and change the email address to a valid one.
         </div>
         {% endif %}
         <button type="button" class="btn btn-info float-left" style="margin-bottom: 10px;" id="backBtn"> <i class="fa fa-chevron-left" aria-hidden="true" ></i> Back to Admin Portal</button>
