--- a/grasa_event_locator/templates/editEvent.html
+++ b/grasa_event_locator/templates/editEvent.html
@@ -1,7 +1,7 @@
 {% include "header.html" %}
 <div class="container event-container">
     <h2>Edit Event</h2>
-    <p class="text-muted">When you edit your event it will need to be re-submited for approval by the administrators. Until the change is approved, your event will remain the same.</p>
+    <p class="text-muted">When you edit your event it will need to be re-submited for approval by the administrators. Until your changes are approved, your event will continue to appear search results without your new changes.</p>
     <div class="row">
         <div class="col-12">
             <button type="button" class="btn btn-danger float-right" data-toggle="modal" data-target="#cancelModal">Cancel</button>
@@ -17,7 +17,7 @@
                 </button>
               </div>
               <div class="modal-body">
-               Are you sure you want to cancel? The information for your new event will not be saved.
+               Are you sure you want to cancel? The changes to your event will not be saved.
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal"> Nevermind</button>
@@ -39,7 +39,7 @@
                 </button>
               </div>
               <div class="modal-body">
-               Looks Good! Your event will be submitted to the administrators for approval. Until it is approved, your event will not appear in search results.
+               Looks Good! Your event updates will be submitted to the administrators for approval. Until your changes are approved, your event will continue to appear search results without your new changes.
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times" aria-hidden="true"></i> Cancel</button>
