--- a/grasa_event_locator/templates/search/search.html
+++ b/grasa_event_locator/templates/search/search.html
@@ -226,17 +226,22 @@
         var dict = {};
         {% for result in object_list %}
         // For each result object we need to check if it shares an address with another result
+        
+        //fix + issue
+        var address = "{{ result.object.address }}";
+        address = address.replace(/\+/g, ' '); 
+        
         // First we check if there is a matching latitude with one we've seen already
         if("{{ result.object.lat }}" in dict){
             // Here we have seen the latitude already, so we check to see if we've seen the longitude yet
             if("{{ result.object.lng }}" in dict["{{ result.object.lat }}"]){
                 // Here we have seen the latitude and longitude already, so we should append to previuos event marker
-                dict["{{ result.object.lat }}"]["{{ result.object.lng }}"] = dict["{{ result.object.lat }}"]["{{ result.object.lng }}"] + "<hr><b>{{ result.object.title }}</b><br><span class='addressFix'>{{ result.object.address }}</span><br><a href='/event/" + {{ result.object.id }} + "'>Details</a>";
+                dict["{{ result.object.lat }}"]["{{ result.object.lng }}"] = dict["{{ result.object.lat }}"]["{{ result.object.lng }}"] + "<hr><b>{{ result.object.title }}</b><br>"+address+"<br><a href='/event/" + {{ result.object.id }} + "'>Details</a>";
             } else {
-                dict["{{ result.object.lat }}"]["{{ result.object.lng }}"] = "<div class='leafeventPopup'><b>{{ result.object.title }}</b><br><span class='addressFix'>{{ result.object.address }}</span><br><a href='/event/" + {{ result.object.id }} + "'>Details</a>";
+                dict["{{ result.object.lat }}"]["{{ result.object.lng }}"] = "<div class='leafeventPopup'><b>{{ result.object.title }}</b><br>"+address+"<br><a href='/event/" + {{ result.object.id }} + "'>Details</a>";
             }
         } else{
-            dict["{{ result.object.lat }}"] = { "{{ result.object.lng }}" : "<div class='leafeventPopup'><b>{{ result.object.title }}</b><br><span class='addressFix'>{{ result.object.address }}</span><br><a href='/event/" + {{ result.object.id }} + "'>Details</a>"};
+            dict["{{ result.object.lat }}"] = { "{{ result.object.lng }}" : "<div class='leafeventPopup'><b>{{ result.object.title }}</b><br>"+address+"<br><a href='/event/" + {{ result.object.id }} + "'>Details</a>"};
         }
         {% endfor %}
         for(var lat in dict){
