--- a/grasa_event_locator/templates/resetPWForm.html
+++ b/grasa_event_locator/templates/resetPWForm.html
@@ -1,22 +1,37 @@
-{% include "header.html" %}
+{% include "header.php" %}
 
 
   <div class="form-changePW">
 	<form method="post">
 	{% csrf_token %}
-		<label for="currentPW">New Password</label>
-		<input type="password" id="currentPW" class="form-control" name="new" required autofocus>
+		<label for="newPW">New Password</label>
+		<input type="password" id="newPW" class="form-control" name="new" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter,and at least 8 or more characters" required autofocus>
+			<div>
+			<p>Password must contain the following:</p>
+				<ul>
+				  <li id="letter">A <b>lowercase</b> letter</li>
+				  <li id="capital">A <b>capital (uppercase)</b> letter</li>
+				  <li id="number">A <b>number</b></li>
+				  <li id="length">Minimum <b>8 characters</b></li>
+				</ul>
+			</div>
+
 		</br>
-		<label for="newPW">Confirm Password</label>
-		<input type="password" id="newPW" class="form-control" name="confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
-		<input type="checkbox" onclick="myFunction()"> &nbsp; Show Password
+		<label for="confirmPW">Confirm Password</label>
+		<input type="password" id="confirmPW" class="form-control" name="confirm" required>	
+		
+		<input id="SPcheckbox" type="checkbox" onclick="myFunction()">
+        <label for="SPcheckbox">&nbsp; Show Password</label>
+			<div class="invalid-feedback">
+				Passwords must match.
+			</div>
 		</br>
 
 
 	<!--Pop-up confirmation page after clicking submit button on Registration form-->
 	<div class="row">
         <div class="col-12">
-            <button type="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
+            <button type="submit" class="btn btn-lg btn-primary btn-block" id="submitBtn">Submit</button>
         </div>
 	</div>
 
@@ -24,18 +39,134 @@
   </div>
 
 <script>
-function myFunction() {
-  var x = document.getElementById("currentPW");
-  var y = document.getElementById("newPW");
-  if (x.type === "password" || y.type === "password") {
-    x.type = "text";
-	y.type = "text";
-  } else {
-    x.type = "password";
-	y.type = "password";
-  }
-}
+    //ok on submit
+    var submitBtn = document.getElementById('submitBtn');
+    submitBtn.onclick = function(){
+        //SUBMITS the form
+        $('form').submit()
+        //window.location = '/search/';
+    }
+
+    //confirm password extra validation
+    $('#confirmPW').keyup(function() {
+      if ( document.getElementById("confirmPW").value != document.getElementById("newPW").value ) {
+          if(document.getElementById("theForm").classList.contains('was-validated')){
+              $('#confirmPW').removeClass( "is-invalid" );
+              $('#confirmPW').addClass( "is-valid" );
+              $('#confirmPW').css('border', 'solid 1px #28a745');
+          }
+      }
+    });
+
+
+    //password validation - Lei
+    function myFunction() {
+      var x = document.getElementById("newPW");
+      var y = document.getElementById("confirmPW");
+      if (x.type === "password" || y.type === "password") {
+        x.type = "text";
+        y.type = "text";
+      } else {
+        x.type = "password";
+        y.type = "password";
+      }
+
+    }
+
+
+    //validation
+    (function() {
+      'use strict';
+      window.addEventListener('load', function() {
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.getElementsByClassName('needs-validation');
+        // Loop over them and prevent submission
+        var validation = Array.prototype.filter.call(forms, function(form) {
+          form.addEventListener('submit', function(event) {
+            if ( document.getElementById("confirmPW").value != document.getElementById("newPW").value ) {
+                //if passwords don't match
+                event.preventDefault();
+                event.stopPropagation();
+                $('#confirmPW').addClass( "is-invalid" );
+                $('#confirmPW').css('border', 'solid 1px #dc3545')
+                $('#confirmPW').css('background-image', 'none');
+            }else if (form.checkValidity() === false) {
+                event.preventDefault();
+                event.stopPropagation();
+            }else{
+                event.preventDefault();
+                event.stopPropagation();
+                $('#submitModal').modal('show');
+            }
+            form.classList.add('was-validated');
+
+          }, false);
+        });
+      }, false);
+    })();
+
+
+	//password validation check mark
+	var myInput = document.getElementById("newPW");
+	var letter = document.getElementById("letter");
+	var capital = document.getElementById("capital");
+	var number = document.getElementById("number");
+	var length = document.getElementById("length");
+
+	// When the user clicks on the password field, show the message box
+	myInput.onfocus = function() {
+	  document.getElementById("message").style.display = "block";
+	}
+
+	// When the user clicks outside of the password field, hide the message box
+	myInput.onblur = function() {
+	  document.getElementById("message").style.display = "none";
+	}
+
+	// When the user starts to type something inside the password field
+	myInput.onkeyup = function() {
+	  // Validate lowercase letters
+	  var lowerCaseLetters = /[a-z]/g;
+	  if(myInput.value.match(lowerCaseLetters)) {
+		letter.classList.remove("invalid");
+		letter.classList.add("valid");
+	  } else {
+		letter.classList.remove("valid");
+		letter.classList.add("invalid");
+	  }
+
+	  // Validate capital letters
+	  var upperCaseLetters = /[A-Z]/g;
+	  if(myInput.value.match(upperCaseLetters)) {
+		capital.classList.remove("invalid");
+		capital.classList.add("valid");
+	  } else {
+		capital.classList.remove("valid");
+		capital.classList.add("invalid");
+	  }
+
+	  // Validate numbers
+	  var numbers = /[0-9]/g;
+	  if(myInput.value.match(numbers)) {
+		number.classList.remove("invalid");
+		number.classList.add("valid");
+	  } else {
+		number.classList.remove("valid");
+		number.classList.add("invalid");
+	  }
+
+	  // Validate length
+	  if(myInput.value.length >= 8) {
+		length.classList.remove("invalid");
+		length.classList.add("valid");
+	  } else {
+		length.classList.remove("valid");
+		length.classList.add("invalid");
+	  }
+	}
+
+	
 </script>
 
-{% include "footer.html" %}
+{% include "footer.php" %}
 
