--- a/grasa_event_locator/templates/resetPWForm.html
+++ b/grasa_event_locator/templates/resetPWForm.html
@@ -1,4 +1,4 @@
-{% include "header.php" %}
+{% include "header.html" %}
 
   <div class="form-changePW">
 	    {% if expired %}
@@ -177,5 +177,5 @@
 	
 </script>
 
-{% include "footer.php" %}
+{% include "footer.html" %}
 
