--- a/grasa_event_locator/templates/provider.html
+++ b/grasa_event_locator/templates/provider.html
@@ -1,6 +1,12 @@
 {% include "header.html" %}
 <div class="container event-container">
     <div class="row">
+
+        {% if incorrect_password %}
+            <div class="alert alert-warning" role="alert">
+                Inputted password is incorrect; please try again.
+            </div>
+        {% endif %}
     <!--Top Row-->
         <div class="col-sm-12 card">
             <div class="card-body">
