--- a/grasa_event_locator/templates/admin.html
+++ b/grasa_event_locator/templates/admin.html
@@ -4,6 +4,11 @@
 <div class="container home-container">
 
 	<div class="row">
+        {% if incorrect_password %}
+            <div class="alert alert-warning" role="alert">
+                Inputted password is incorrect; please try again.
+            </div>
+{% endif %}
     <!--Top Row-->
         <div class="col-sm-12 card">
             <div class="card-body">
