--- a/grasa_event_locator/templates/footer.html
+++ b/grasa_event_locator/templates/footer.html
@@ -3,7 +3,7 @@
           <div class="container">
             <nav class="navbar navbar-expand-sm navbar-light">
                 <div class="navbar-nav footer-nav">
-                  <a class="nav-item nav-link" href="https://www.monroecounty.gov/" target="_blank">Monroe County website</a>
+                  <a class="nav-item nav-link" href="https://www.monroecounty.gov/" target="_blank">Monroe County Website</a>
                   <a class="nav-item nav-link" href="/about.html">About</a>
                   <a class="nav-item nav-link" href="/about.html#contact">Contact</a>
                 </div>
