--- a/grasa_event_locator/templates/resetPWForm.html
+++ b/grasa_event_locator/templates/resetPWForm.html
@@ -11,61 +11,64 @@
 		  Please confirm that the inputted passwords match.
 		</div>
 		{% endif %}
-	<form method="post">
+      <h1 class="h3 mb-3 font-weight-normal text-center top-20">Reset Password</h1>
+	<form id="theForm" method="post" class="needs-validation" novalidate >
 	{% csrf_token %}
 		{% if valid_string %}
-		<label for="newPW">New Password</label>
-		<input type="password" id="newPW" class="form-control" name="new" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter,and at least 8 or more characters" required autofocus>
-			<div>
-			<p>Password must contain the following:</p>
-				<ul>
-				  <li id="letter">A <b>lowercase</b> letter</li>
-				  <li id="capital">A <b>capital (uppercase)</b> letter</li>
-				  <li id="number">A <b>number</b></li>
-				  <li id="length">Minimum <b>8 characters</b></li>
-				</ul>
-			</div>
+        <div class="row">
+                <div class="col-sm-12">
+                    <div class="form-group col-md-12">
+                        <label for="newPW">New Password</label>
+                        <input type="password" id="newPW" class="form-control" name="new" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+                        <div class="invalid-feedback">
+                          <p>Password must contain the following:</p>
+                            <ul>
+                              <li id="letter">A <b>lowercase</b> letter</li>
+                              <li id="capital">A <b>capital (uppercase)</b> letter</li>
+                              <li id="number">A <b>number</b></li>
+                              <li id="length">Minimum <b>8 characters</b></li>
+                            </ul>
+                        </div>
+                    </div>
 
-		<label for="confirmPW">Confirm Password</label>
-		<input type="password" id="confirmPW" class="form-control" name="confirm" required>
+                    <div class="form-group col-md-12">
+                        <label for="confirmPW">Confirm New Password</label>
 
-		<input id="SPcheckbox" type="checkbox" onclick="myFunction()">
-		<label for="SPcheckbox">&nbsp; Show Password</label>
-			<div class="invalid-feedback">
-				Passwords must match.
-			</div>
-		</br>
+                        <input type="password" id="confirmPW" class="form-control" name="confirm" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+                        <div class="invalid-feedback">
+                            Passwords must match.
+                        </div>
+                        <input id="SPcheckbox" type="checkbox" onclick="myFunction()">
+                        <label for="SPcheckbox">&nbsp; Show Password</label>
+                    </div>
 
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 registerBtnRow">
+                    <button type="submit" class="btn btn-lg btn-success btn-block top-20" id="submitBtn">Submit</button>
+                    <div class="text-center top-20">
+                        <p><a href="login.html">Return to Login</a></p>
+                    </div>
+                </div>
+        </div>
 
-	<!--Pop-up confirmation page after clicking submit button on Registration form-->
-	<div class="row">
-		<div class="col-12">
-			<button type="submit" class="btn btn-lg btn-primary btn-block" id="submitBtn">Submit</button>
-		</div>
-	</div>
 		{% endif %}
 	</form>
   </div>
 
 <script>
-	//ok on submit
-	var submitBtn = document.getElementById('submitBtn');
-	submitBtn.onclick = function(){
-		//SUBMITS the form
-		$('form').submit()
-		//window.location = '/search/';
-	}
-
-	//confirm password extra validation
-	$('#confirmPW').keyup(function() {
-	  if ( document.getElementById("confirmPW").value != document.getElementById("newPW").value ) {
-		  if(document.getElementById("theForm").classList.contains('was-validated')){
-			  $('#confirmPW').removeClass( "is-invalid" );
-			  $('#confirmPW').addClass( "is-valid" );
-			  $('#confirmPW').css('border', 'solid 1px #28a745');
-		  }
-	  }
-	});
+	
+    //confirm password extra validation
+    $('#confirmPW').keyup(function() {
+      if ( document.getElementById("confirmPW").value != document.getElementById("myPW").value ) {
+          if(document.getElementById("theForm").classList.contains('was-validated')){
+              $('#confirmPW').removeClass( "is-invalid" );
+              $('#confirmPW').addClass( "is-valid" );
+              $('#confirmPW').css('border', 'solid 1px #28a745');
+          }
+      }
+    });
 
 
 	//password validation - Lei
@@ -103,9 +106,7 @@
 				event.preventDefault();
 				event.stopPropagation();
 			}else{
-				event.preventDefault();
-				event.stopPropagation();
-				$('#submitModal').modal('show');
+				 $('form').submit()
 			}
 			form.classList.add('was-validated');
 
