--- a/grasa_event_locator/templates/admin.html
+++ b/grasa_event_locator/templates/admin.html
@@ -137,7 +137,7 @@
                                             <div class="invalid-feedback">
                                                 Please provide an explanation.
                                             </div>
-                                            <input type="hidden" id="userid" name="userid" value={{ user.id }} readonly>
+                                            <input type="hidden" name="eventid" value={{ pendingEvent.id }} readonly>
                                             <div class="text-muted form-text">This will be sent to {{ pendingEvent.user_id.org_name }}.</div>
                                         </div>
 
