Admin self-delete  (#235)
* Update allAdmins.html

Alters the delete button in allAdmins, so the currently logged-in admin will see a "1" in their delete button table entry. This of course, will need to get replaced.

* Current User

Switch to Current User

* Update allAdmins.html

Alters the delete button in allAdmins, so the currently logged-in admin will see a "1" in their delete button table entry. This of course, will need to get replaced.

--- a/grasa_event_locator/templates/allAdmins.html
+++ b/grasa_event_locator/templates/allAdmins.html
@@ -30,7 +30,11 @@
                 {% for user in userList %}
                   <th scope="row"><a href="mailto:{{ user.user }}">{{ user.user }}</a></th>
                   <th scope="row">{{ user.user.last_login }}</th>
-                  <td><button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteModal{{ user.id }}">Delete</button></td>
+                    {% if user.id == request.user.id %}
+                    <td><button style="color:#dc3545;opacity:1;" type="button" class="btn btn-link disabled">--</button></td>
+                    {% else %}
+                    <td><button type="button" class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteModal{{ user.id }}">Delete</button></td>
+                    {% endif %}
                 </tr>
 
                 <!--Delete Modal-->
